# Visual-TCAV

./: .gitignore  LICENSE  Makefile  README.md  VisualTCAV.py  VisualTCAV_guide.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml  config_minimal.yaml
datasets_and_models_downloader/: datasets_and_models_downloader.py
src/: loggers.py
src/cgpt_interface/: chatgpt_query.py  chatgpt_transformation.py
src/visual_tcav/: config_loader.py  main.py
src/visual_tcav/framework/: VisualTCAV.py  run_visual_tcav.py
